fix #55 /api/v1/reboot will now reboot the server, this should work better than the manager approach
